# knbn

./: .gitignore  manage.py  pyproject.toml
board/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
board/migrations/: 0001_initial.py  0002_boardmembership_one_membership_per_user_per_board.py  0003_alter_board_slug.py  0004_board_archived.py
board/tests/: conftest.py  test_models.py  test_views.py
knbn/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  tests.py
users/migrations/: 0001_initial.py
users/tests/: conftest.py
