[tool.poetry]
name = "knbn"
version = "0.1.0"
description = ""
authors = ["Mirosław Błażej <miro662@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
black = {extras = ["d"], version = "^23.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
