[tool.poetry]
name = "knbn"
version = "0.1.0"
description = ""
authors = ["Mirosław Błażej <miro662@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
markdown = "^3.4.3"
django-filter = "^23.1"
drf-spectacular = "^0.26.2"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
black = {extras = ["d"], version = "^23.3.0"}
pytest = "^7.3.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "knbn.settings"
python_files = "test_*.py"